# LSENeRF

./: .gitignore  README.md  continue_training.sh  environement.yml  pyproject.toml  run.sh  train.py
docs/: index.html  readme.html
docs/resources/js/: video_comparison.js
exp_configs/: BADNERF_config.sh  BADNERF_emb_config.sh  lsenerf_config.sh  lsenerf_emb_config.sh
lse_nerf/: __init__.py  data_components.py  intensity_mappers.py  interpolation_utils.py  lse_cameras.py  lse_config.py  lse_datamanager.py  lse_dataset.py  lse_embeddings.py  lse_field.py  lse_grid_estimator.py  lse_loaders.py  lse_parser.py  lse_pipeline.py  lse_pixel_sampler.py  lse_ray_generator.py  lse_renderer.py  lse_trainer.py  lse_writer.py  lsenerf.py  ns_camera_optimizer.py  utils.py
scripts/: emb_eval.sh  eval.sh  train_evimo.sh  train_lse_data.sh
